Infrastructure/Kubernetes/ModerationService-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation-service
  template:
    metadata:
      labels:
        app: moderation-service
    spec:
      containers:
        - name: moderation-service
          image: jimshao1999/blog_moderation-service
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service-serv
spec:
  selector:
    app: moderation-service
  ports:
    - name: moderation-service
      protocol: TCP
      port: 4003
      targetPort: 4003
