Infrastructure/Kubernetes/PostService-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service-serv
spec:
  type: NodePort
  selector:
    app: post-service
  ports:
    - name: post-service
      protocol: TCP
      port: 4000
      targetPort: 4000
